style:Fix widget-button to align left

--- a/css/sgui.css
+++ b/css/sgui.css
@@ -62,7 +62,6 @@
 .widget-button, .btn {
 	box-sizing: border-box;
 	display: flex;
-	justify-content: center;
 	flex-wrap: nowrap;
 	margin: 0px;
 	padding: 6px 8px;
